# project-data-ai-new

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: feeds.json
src/collector/: hn_collector.py  rss_collector.py
src/db/: article_repository.py
src/project_data_ai_new.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/summarizer/: article_summarizer.py
tests/test_collector/: test_hn_collector.py  test_rss_collector.py
tests/test_db/: test_article_repository.py
tests/test_summarizer/: test_article_summarizer.py
